# senior-thesis-tools

./: .gitignore  README.md  main.py  pyproject.toml
data/editing/: DMIS_INEKO.csv  alignment_yoneko - alignment_clean.csv  analyzed_ineko.csv  edit_alignment_ineko.csv  マクラーレン＿対応訳＿編集中 - alignment_edwin_raw.csv
data/processed/: alignment_clean.csv  alignment_edwin.csv  alignment_yoneko - alignment_clean.csv  highlights_clean.csv  proc_alignment_edwin.csv  proc_translation_edwin.csv  proc_translation_ineko.csv
data/raw/: alignment.csv  highlights.csv  highlights_jpn.csv  ineko.txt  raw_alignment_edwin.csv  raw_analyzed_edwin.csv  raw_analyzed_ineko.csv  raw_dmis_edwin.csv
dmis_analyze/: error_log.txt
generate_heatmap/: dmis_ineko.csv
memo/: 251118_mid_presen.md
notes/: 251118_mid_presen.md  251128.md
papers/: EdwinMcClellan.txt  def_dmis.csv  translation.md  検閲用チートシート.html
papers/references/: README.md
presentation/: abstruct_j2200156.docx  final_presen_j2200156.pptx  final_presentation.md
thesis/: startpage.docx  thesis_j2200156.docx  卒論.docx
thesis/cmt/: grad_thesis_1st_draft_yazawa_cmt.docx  grad_thesis_2nd_draft_yazawa_cmt.docx.docx  thesis_j2200156_checked.docx
tools/analyze_dmis/: main.py  proc_translation_edwin.csv  raw_dmis_ineko.csv  test_analyzed.csv
tools/analyze_translation/: README.md  main.py  test.csv  test_analyzed.csv
tools/dmis_analyze/: alignment_ineko.csv  analyzed_ineko.csv  dmis_ineko.csv  error_log.txt  ma_analysis.txt  main.py  test_analyzed_edwin.csv  test_data.csv  test_data_analyzed.csv  test_data_analyzed2.csv
(+13 files in other folders)
