[project]
name = "senior-thesis"
version = "0.1.0"
description = "卒論関連"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "google-generativeai>=0.8.5",
    "matplotlib>=3.10.7",
    "nltk>=3.9.2",
    "pandas>=2.3.3",
    "path>=17.1.1",
    "python-dotenv>=1.2.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.2",
    "tqdm>=4.67.1",
]
